tests/compile-fail/tracked_fn_return_ref.stderr
error[E0106]: missing lifetime specifier
  --> tests/compile-fail/tracked_fn_return_ref.rs:33:6
   |
33 | ) -> ContainsRef {
   |      ^^^^^^^^^^^ expected named lifetime parameter
   |
help: consider using the `'db` lifetime
   |
33 | ) -> ContainsRef<'db> {
   |                 +++++

error: lifetime may not live long enough
  --> tests/compile-fail/tracked_fn_return_ref.rs:15:67
   |
15 | fn tracked_fn_return_ref<'db>(db: &'db dyn Db, input: MyInput) -> &'db str {
   |                          --- lifetime `'db` defined here          ^ requires that `'db` must outlive `'static`

error: lifetime may not live long enough
  --> tests/compile-fail/tracked_fn_return_ref.rs:23:6
   |
20 | fn tracked_fn_return_struct_containing_ref<'db>(
   |                                            --- lifetime `'db` defined here
...
23 | ) -> ContainsRef<'db> {
   |      ^^^^^^^^^^^ requires that `'db` must outlive `'static`

error: lifetime may not live long enough
  --> tests/compile-fail/tracked_fn_return_ref.rs:43:6
   |
40 | fn tracked_fn_return_struct_containing_ref_elided_explicit<'db>(
   |                                                            --- lifetime `'db` defined here
...
43 | ) -> ContainsRef<'_> {
   |      ^^^^^^^^^^^ requires that `'db` must outlive `'static`
